2005-12-27    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/ByBidderID.pm: new backend!

	* lib/WWW/Search/Ebay.pm (parse_tree): use new item_number (et al.) attributes in SearchResult

2005-12-25    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): now returns the item's category number

2005-08-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Stores.pm (native_setup_search): fixed the CGI options

2005-08-27    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): determine order of columns dynamically

2005-08-18    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Stores.pm (columns): damn ebay.com changed the column order again

	* lib/WWW/Search/Ebay.pm (columns): damn ebay.com changed the column order again
	(parse_price): watch for running off the end of the Stores list

	* lib/WWW/Search/Ebay/BuyItNow.pm (columns): damn ebay.com changed the column order again

2005-08-16    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm: new flexible way of parsing table cells in a backend-specific order!

	* lib/WWW/Search/Ebay/BuyItNow.pm (columns): new method

	* lib/WWW/Search/Ebay/Motors.pm (columns): new method

	* lib/WWW/Search/Ebay/Stores.pm (columns): new method

	* lib/WWW/Search/Ebay/UK.pm (columns): new method

2005-08-14    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/BySellerID.pm: NEW BACKEND
	* t/bysellerid.t: new tests for the above

	* lib/WWW/Search/Ebay.pm (parse_tree): do not return results from auto-spell-checked query term
	* t/basic.t: added tests for the above

2005-08-07    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): return URLs as simple old cgi arguments

2005-07-30    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/UK.pm (_result_count_td_specs_OLD): use parent class' value for this method

	* lib/WWW/Search/Ebay.pm (preprocess_results_page): fix title pattern

2005-07-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): two fixes for new eBay page format

2005-06-11  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm (preprocess_results_page): new method