@@ -1,3 +1,7 @@
+2006-02-18    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay.pm (parse_tree): enhanced to parse Completed listings
+
 2005-12-27    <Daddy@C-3PO>
 
 	* lib/WWW/Search/Ebay/ByBidderID.pm: new backend!
